force-app/main/default/objects/Cart_Payment_Information__c/Cart_Payment_Information__c.object-meta.xml
<CustomObject>
    <label>Cart Payment Information</label>
    <nameField>
        <displayFormat>CPI-{000000000}</displayFormat>
        <label>Cart Payment Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Payment Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>