force-app/main/default/objects/Cart_Payment_Information__c/fields/Coupon_name__c.field-meta.xml
<CustomField>
    <fullName>Coupon_name__c</fullName>
    <label>Coupon name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>