force-app/main/default/objects/Cart_Payment_Information__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>